Resolve the X Protocol URL